--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR FULL NAME\n",
+    "Logan Becker\n",
     "\n",
     " - Collaborator 1\n",
     " - Collaborator 2\n",
@@ -18,7 +18,7 @@
     "DS325, Gettysburg College, Professor Eatai Roth\n",
     "# Problem Set 1 - Linear Regression\n",
     "\n",
-    "Due Friday Feb 13, 2025 11:30a\n",
+    "Due  Thursday 13, 2025 11:30a\n",
     "\n",
     "Total pts: 20\n",
     "\n",
@@ -41,13 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sklearn as sk\n",
+    "\n",
+    "from sklearn.datasets import make_regression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n"
@@ -236,11 +241,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training MSE: 960.4569654749638\n",
+      "Training R2: 0.9636052345313392\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here. Add cells as needed."
+    "# Your code here. Add cells as needed.\n",
+    "\n",
+    "x_columns = column_names\n",
+    "\n",
+    "X = reg_df[x_columns]\n",
+    "y = reg_df['y']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "model_linreg = LinearRegression()\n",
+    "model_linreg.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_train = model_linreg.predict(X_train)\n",
+    "y_pred_test = model_linreg.predict(X_test)\n",
+    "y_pred_all = model_linreg.predict(X)\n",
+    "\n",
+    "MSE_train = mean_squared_error(y_train, y_pred_train)\n",
+    "R2_train = model_linreg.score(X_train, y_train)\n",
+    "\n",
+    "print(f'Training MSE: {MSE_train}')\n",
+    "print(f'Training R2: {R2_train}')\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -669,7 +705,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datascience",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -683,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
